# Context_Clipboard

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Classifier.h  ClipBoardListener.h  Database.h  Search.h  Utils.h
src/: Classifier.cpp  ClipBoardListener.cpp  Database.cpp  Search.cpp  Utils.cpp  clipsearch_main.cpp  main.cpp
